--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Nav -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -16,15 +16,12 @@
         </ul>
     </nav>
 
-    <!-- Main Content -->
+    <!-- Main -->
     <header>
         <h1>Welcome to Fit for Fun Fitness Club</h1>
-    </header>
-
-    <section>
         <p>Your fitness journey starts here. Join us for a variety of classes designed to fit your lifestyle!</p>
-        <img src="path/to/image1.jpg" alt="Gym facility">
-        <img src="path/to/image2.jpg" alt="Fitness class">
-    </section>
+    </header>
+        <img src="gymfacility.webp" id="img1" height="350" alt="Gym facility">
+        <img src="fitnessclass.webp" id="img2" height="350" alt="Fitness class">
 </body>
 </html>
