--- a/info.html
+++ b/info.html
@@ -21,10 +21,10 @@
         <h2>Sign Up for More Information</h2>
         <form action="thankyou.html" method="get">
             <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" name="firstName" required>
+            <input type="text" id="firstName" name="First Name" required>
 
             <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" name="lastName" required>
+            <input type="text" id="lastName" name="Last Name" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email">
@@ -33,7 +33,7 @@
             <input type="tel" id="phone" name="phone">
 
             <label for="contactMethod">Best Way to Reach You:</label>
-            <select id="contactMethod" name="contactMethod">
+            <select id="contactMethod" name="Contact Method">
                 <option value="email">Email</option>
                 <option value="phone">Phone</option>
                 <option value="owl">Owl</option>
