--- a/classes.html
+++ b/classes.html
@@ -22,28 +22,79 @@
         <table>
             <thead>
                 <tr>
-                    <th>Day</th>
-                    <th>Time</th>
-                    <th>Class</th>
+                    <th>Monday<br>June 15</th>
+                    <th>Tuesday<br>June 16</th>
+                    <th>Wednesday<br>June 17</th>
+                    <th>Thursday<br>June 18</th>
+                    <th>Friday<br>June 19</th>
+                    <th>Saturday<br>June 20</th>
+                    <th>Sunday<br>June 21</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Monday</td>
-                    <td>8:00 AM</td>
-                    <td>Yoga</td>
+                    <td><h3>Cross Training</h3><br>06:30 - 07:30<br>Kelly Johnson</td>
+                    <td></td>
+                    <td><h3>Cross Training</h3><br>08:00 - 08:30<br>Kelly Johnson</td>
+                    <td></td>
+                    <td><h3>Cross Training</h3><br>06:30 - 07:30<br>Kelly Johnson</td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>Wednesday</td>
-                    <td>6:00 PM</td>
-                    <td>Spin</td>
+                    <td><h3>Sprint</h3><br>06:30 - 07:30<br>Annette Farouki</td>
+                    <td></td>
+                    <td><h3>Sprint</h3><br>06:30 - 07:30<br>Annette Farouki</td>
+                    <td></td>
+                    <td></td>
+                    <td><h3>Spin</h3><br>08:00 - 08:45<br>Kelly Johnson</td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>Friday</td>
-                    <td>7:00 AM</td>
-                    <td>HIIT</td>
+                    <td></td>
+                    <td><h3>Spin</h3><br>08:30 - 09:30<br>Kelly Johnson</td>
+                    <td></td>
+                    <td><h3>Spin</h3><br>08:30 - 09:30<br>Kelly Johnson</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
-                <!-- Add additional classes here -->
+                <tr>
+                    <td><h3>BodyPump</h3><br>09:00 - 10:00<br></td>
+                    <td><h3>BodyCombat</h3><br>09:00 - 10:00<br>Annette Farouki</td>
+                    <td><h3>BodyPump</h3><br>09:00 - 10:00<br></td>
+                    <td><h3>BodyCombat</h3><br>09:00 - 10:00<br>Annette Farouki</td>
+                    <td><h3>BodyPump</h3><br>09:00 - 10:00<br></td>
+                    <td><h3>BodyPump</h3><br>09:00 - 10:00<br>Lea Anne Latimer</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><h3>Step Interval</h3><br>17:30 - 18:30<br></td>
+                    <td></td>
+                    <td><h3>Step Interval</h3><br>17:30 - 18-30<br></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><h3>Advanced Cross Training</h3><br>17:45 - 18:45<br>Brooke Henderson</td>
+                    <td></td>
+                    <td><h3>Advanced Cross Training</h3><br>17:45 - 18:45<br>Brooke Henderson</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><h3>MixxedFIT</h3><br>19:00 - 20:00<br></td>
+                    <td></td>
+                    <td><h3>Zumba</h3><br>17:45 - 18:45<br>Angela Esquivel-Zahner</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </tbody>
         </table>
     </section>
