Updated readme and added completed comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Assignment completed by Charles Looney Fitness. 03 NOV 2024 -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
