--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Assignment completed by Charles Looney Fitness. 03 NOV 2024 -->
 
 <head>
     <meta charset="UTF-8">
