Fixed form on final draft

--- a/info.html
+++ b/info.html
@@ -28,10 +28,10 @@
             <input type="text" id="lastName" name="Last Name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="Email">
 
             <label for="phone">Phone:</label>
-            <input type="tel" id="phone" name="phone">
+            <input type="tel" id="phone" name="Phone">
 
             <label for="contactMethod">Best Way to Reach You:</label>
             <select id="contactMethod" name="Contact Method">
@@ -43,9 +43,15 @@
 <!-- Classes Interested In Section -->
 <p>Classes Interested In:</p>
 <div class="checkbox-group">
-    <label><input type="checkbox" id="yoga" name="classes" value="Yoga"> Yoga</label>
-    <label><input type="checkbox" id="spin" name="classes" value="Spin"> Spin</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="HIIT"> HIIT</label>
+    <label><input type="checkbox" id="yoga" name="classes" value="Cross Training"> Cross Training</label>
+    <label><input type="checkbox" id="spin" name="classes" value="Sprint"> Sprint</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="Spin"> Spin</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="BodyPump"> BodyPump</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="BodyCombat"> BodyCombat</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="Step Interval"> Step Interval</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="Advance Cross Training"> Advance Cross Training</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="MixxedFIT"> MixxedFIT</label>
+    <label><input type="checkbox" id="hiit" name="classes" value="Zumba"> Zumba</label>
 </div>
 
 <!-- Preferred Time Section -->
