--- a/info.html
+++ b/info.html
@@ -43,15 +43,15 @@
 <!-- Classes Interested In Section -->
 <p>Classes Interested In:</p>
 <div class="checkbox-group">
-    <label><input type="checkbox" id="yoga" name="classes" value="Cross Training"> Cross Training</label>
-    <label><input type="checkbox" id="spin" name="classes" value="Sprint"> Sprint</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="Spin"> Spin</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="BodyPump"> BodyPump</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="BodyCombat"> BodyCombat</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="Step Interval"> Step Interval</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="Advance Cross Training"> Advance Cross Training</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="MixxedFIT"> MixxedFIT</label>
-    <label><input type="checkbox" id="hiit" name="classes" value="Zumba"> Zumba</label>
+    <label><input type="checkbox" name="classes" value="Cross Training"> Cross Training</label>
+    <label><input type="checkbox" name="classes" value="Sprint"> Sprint</label>
+    <label><input type="checkbox" name="classes" value="Spin"> Spin</label>
+    <label><input type="checkbox" name="classes" value="BodyPump"> BodyPump</label>
+    <label><input type="checkbox" name="classes" value="BodyCombat"> BodyCombat</label>
+    <label><input type="checkbox" name="classes" value="Step Interval"> Step Interval</label>
+    <label><input type="checkbox" name="classes" value="Advance Cross Training"> Advance Cross Training</label>
+    <label><input type="checkbox" name="classes" value="MixxedFIT"> MixxedFIT</label>
+    <label><input type="checkbox" name="classes" value="Zumba"> Zumba</label>
 </div>
 
 <!-- Preferred Time Section -->
